tests/scripts/errors/errors_2_expected.txt
stderr:

Compiling 'errors_2.zs'
Pass 1: Parsing
syntax error, unexpected RBRACE, expecting end of file [errors_2.zs Line 1 Column 25 '}']


1    global script Global {}}}}}{{}}
                            ^


 - Error P000: Can't parse the main buffer! Aborting.
Failure!
Compile finished with exit code '-1' (compiled with warnings)

stdout:

{
  "success": false,
  "code": -1,
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 23
        },
        "end": {
          "line": 0,
          "character": 24
        }
      },
      "severity": 1,
      "message": "syntax error, unexpected RBRACE, expecting end of file"
    }
  ]
}
